# FlintCLI

./: .gitmodules  Cargo.toml  FEATURES.md  GETTING_STARTED.md  README.md  USAGE.md  build.rs
.github/workflows/: test.yml
example_tests/: basic_placement.json  multi_event_tick.json
example_tests/fences/: fence_connects_to_block.json  fence_to_fence.json
example_tests/redstone/: lever_basic.json  redstone_clock.json
example_tests/water/: water_source.json
src/: bot.rs  executor.rs  main.rs  spatial_batch.rs  test_spec.rs
src/executor/: actions.rs  adapter.rs  block.rs  command_definitions.rs  commands.rs  events.rs  handlers.rs  mod.rs  tick.rs
src/executor/recorder/: actions.rs  bounding_box.rs  command_definitions.rs  mod.rs  state.rs  tests.rs
