[package]
name = "flintmc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "0d84699" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
flint-core = { git = "https://github.com/FlintTestMC/flint-core", rev = "a623f01" }
clap_complete = "4.5.65"
rustc-hash = "2.1"
