[package]
name = "flintmc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "a8959f62" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
flint-core = { git = "https://github.com/FlintTestMC/flint-core", rev = "6a5fd8c3731c3a67ad70ba4741c3890f97487068" }
clap_complete = "4.5.65"
rustc-hash = "2.1"
